--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div class="desc">
 						<h3>Shared Cursors</h3>
 						<p class="description">
-							A Node.js application I made which allows you to see the cursor position of everyone else connected to the page through utilization of websockets and sockets.io.  Currently also supports setting a name for yourself and displaying chat messages, although your own messages will not be displayed over your own cursor.  Due to Heroku not currently supporting websockets, this app uses the xhr long-polling option that sockets.io provides.  I recommend you open multiple windows to try it out.
+							A Node.js application I made which allows you to see the cursor position of everyone else connected to the page through utilization of websockets and socket.io.  Currently also supports setting a name for yourself and displaying chat messages, although your own messages will not be displayed over your own cursor.  Due to Heroku not currently supporting websockets, this app uses the xhr long-polling option that sockets.io provides.  I recommend you open multiple windows to try it out.
 						</p>
 						<a href="http://protected-caverns-7161.herokuapp.com" class="desc-link">Demonstration</a>
 						<a href="https://github.com/jerchung/shared-cursors-node" class="desc-link">Github</a>
