Added line breaks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<div id="container">
 			<div class="intro">
 				<p>
-					Hi, my name is Jerry Chung, I'm currently a senior at U.C. Berkeley.  This page serves as a portfolio of some projects that I might want to share, though it's a little sparse at the moment...
+					Hi, my name is Jerry Chung, I'm currently a senior at U.C. Berkeley.
+					This page serves as a portfolio of some projects that I might want to
+					share, though it's a little sparse at the moment...
 				</p>
 				<p>
 					Here's my <a href="http://www.linkedin.com/in/jerchung/">LinkedIn</a>, here's my <a href="https://github.com/jerchung">Github</a>,
@@ -21,7 +23,14 @@
 					<div class="desc">
 						<h3>Shared Cursors</h3>
 						<p class="description">
-							A Node.js application I made which allows you to see the cursor position of everyone else connected to the page through utilization of websockets and socket.io.  Currently also supports setting a name for yourself and displaying chat messages, although your own messages will not be displayed over your own cursor.  Due to Heroku not currently supporting websockets, this app uses the xhr long-polling option that sockets.io provides.  I recommend you open multiple windows to try it out.
+							A Node.js application I made which allows you to see the
+							cursor position of everyone else connected to the page through
+							utilization of websockets and socket.io.  Currently also supports
+							setting a name for yourself and displaying chat messages, although
+							your own messages will not be displayed over your own cursor.
+							Due to Heroku not currently supporting websockets,
+							this app uses the xhr long-polling option that sockets.io provides.
+							I recommend you open multiple windows to try it out.
 						</p>
 						<a href="http://protected-caverns-7161.herokuapp.com" class="desc-link">Demonstration</a>
 						<a href="https://github.com/jerchung/shared-cursors-node" class="desc-link">Github</a>
@@ -36,7 +45,12 @@
 					<div class="desc">
 						<h3>Code-Box</h3>
 						<p class="description">
-							A web-app I made a while back when I was first learning about HTML, CSS, and Javascript, and I wanted to play around with the Dropbox API.  I utilized the Flask python framework and extensively used AJAX calls.  This app basically acts as an in-browser text editor for the files in your Dropbox.  Once you login, the left side displays folders and files and you can select a file to start editing it and then click the top right save button to save.
+							A web-app I made a while back when I was first learning about HTML, CSS,
+							and Javascript, and I wanted to play around with the Dropbox API.
+							I utilized the Flask python framework and extensively used AJAX calls.
+							This app basically acts as an in-browser text editor for the files in your Dropbox.
+							Once you login, the left side displays folders and files and you can select a
+							file to start editing it and then click the top right save button to save.
 						</p>
 						<a href="http://code-box.herokuapp.com/" class="desc-link">Demonstration</a>
 						<a href="https://github.com/jerchung/code-box">Github</a>
@@ -51,7 +65,11 @@
 					<div class="desc">
 						<h3>Techcrunch News Reader</h3>
 						<p class="description">
-							Made this app for the Pulse Coding Challenge over one day.  Reads the RSS feed of TechCrunch and gets the four most recent articles. Upon clicking on an article, the user gets a full view of the article as well as the ability to submit comments on the article which are saved in for other users to see.
+							Made this app for the Pulse Coding Challenge over one day.
+							Reads the RSS feed of TechCrunch and gets the four most recent articles.
+							Upon clicking on an article, the user gets a full view of the article as well as
+							the ability to submit comments on the article which are saved in for other users
+							to see.
 						</p>
 						<a href="http://serene-lake-8948.herokuapp.com" class="desc-link">Demonstration</a>
 						<a href="https://github.com/jerchung/Techcrunch-RSS" class="desc-link">Github</a>
@@ -66,7 +84,11 @@
 					<div class="desc">
 						<h3>jQuery Carousel Plugin</h3>
 						<p class="description">
-							jQuery plugin which makes a vertical infinite carousel of an HTML unordered list of elements.  A user can keep scrolling through a list of elements but they will keep repeating, thus creating the effect of looking like a spinning wheel.  Also has the option of automatically scrolling down one list element over a set interval.
+							jQuery plugin which makes a vertical infinite carousel of an
+							HTML unordered list of elements.  A user can keep scrolling through a
+							list of elements but they will keep repeating, thus creating the effect of
+							looking like a spinning wheel.  Also has the option of automatically scrolling
+							down one list element over a set interval.
 						</p>
 						<a href="https://github.com/jerchung/newsCarousel">Github</a>
 					</div>
