--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 					share, though it's a little sparse at the moment...
 				</p>
 				<p>
-					Here's my <a href="http://www.linkedin.com/in/jerchung/">LinkedIn</a>, here's my <a href="https://github.com/jerchung">Github</a>,
-					and here's my <a href="resume.pdf">Resume</a>
+					Here's my <a href="http://www.linkedin.com/in/jerchung/">LinkedIn</a>, <a href="https://github.com/jerchung">Github</a>,
+					and <a href="resume.pdf">Resume</a>
 				</p>
 			</div>
 
