--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				</p>
 				<p>
 					Here's my <a href="http://www.linkedin.com/in/jerchung/">LinkedIn</a>, <a href="https://github.com/jerchung">Github</a>,
-					and <a href="resume.pdf">Resume</a>
+					and <a href="resume.pdf">resume</a>
 				</p>
 			</div>
 
