--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 					share, though it's a little sparse at the moment...
 				</p>
 				<p>
-					Here's my <a href="http://www.linkedin.com/in/jerchung/">LinkedIn</a> and <a href="https://github.com/jerchung">Github</a>
+					Here's my <a href="http://www.linkedin.com/in/jerchung/">LinkedIn</a>,
+					<a href="https://github.com/jerchung">Github</a>,
+					and here's my <a href="resume.pdf">resume</a>
 				</p>
 			</div>
 
