Added scala proj

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 	</head>
 	<body>
 		<div id="container">
-			<div class="intro">
-				<p>
-					Hi, my name is Jerry Chung, I'm currently a senior at U.C. Berkeley.
-					This page serves as a portfolio of some projects that I might want to
-					share, though it's a little sparse at the moment...
-				</p>
-			</div>
-
 			<div id="projects">
+				<div class="project">
+					<div class="desc">
+						<h3>Scala-torrent</h3>
+						<p class="description">
+							A Bittorrent client I wrote using the <a href="http://akka.io/">Akka 
+							actor framework</a>.  This project is still in progress. 
+						</p>
+						<a href="https://github.com/jerchung/scala-torrent">Github</a>
+					</div>
+				</div>
 				<div class="project">
 					<div class="desc">
 						<h3>Shared Cursors</h3>
