Forgot to add the clear div

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 						</p>
 						<a href="https://github.com/jerchung/scala-torrent">Github</a>
 					</div>
+					<div class="clear"></div>
 				</div>
 				<div class="project">
 					<div class="desc">
